# otus-cpp-pro-2023

./: Doxyfile  README.md  annotated.html  classes.html  dir_6eb4bea0cabc69a2923fdbac7f20cce4.html  files.html  globals.html  globals_func.html  group__container-group.html  group__integer-group.html  group__string-group.html  group__test-group.html  group__tuple-group.html  hierarchy.html  index.html  menudata.js  modules.html  printip_8cpp.html  structis__cont.html  structis__cont_3_01std_1_1list_3_01Args_8_8_8_01_4_01_4.html  structis__cont_3_01std_1_1vector_3_01Args_8_8_8_01_4_01_4.html
.github/workflows/: DOXYGEN.yml  allocator.yaml  ip-filter.yml  main.yml  release.yml
homework-1/: CMakeLists.txt  gtest_version.cpp
homework-1/.github/workflows/: release.yml
homework-2/: CMakeLists.txt  gtest.cpp  ip_filter.cpp  lib.cpp  lib.h
homework-3/: CMakeLists.txt  mine_allocator.cpp  pretty.h
homework-4/: CMakeLists.txt  Doxyfile  printip.cpp
search/: all_1.js  all_3.js  all_4.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  searchdata.js
